# mini-projects

./: .gitignore  CLAUDE.md  Dockerfile  README.md
.claude/: settings.local.json
fireship-analyzer/: README.md  extract_hooks.py  pyproject.toml
fireship-analyzer/analyzer/: __init__.py  extractor.py  formatter.py  loader.py  main.py
shark-tank-egypt-dashboard/: README.md  SCRIPT_EP1.md
shark-tank-egypt-dashboard/dashboard/: package-lock.json
shark-tank-egypt-dashboard/dashboard/src/app/: layout.tsx  page.tsx
shark-tank-egypt-dashboard/dashboard/src/components/: Filters.tsx  StartupCard.tsx  StartupGrid.tsx  StatsCards.tsx
shark-tank-egypt-dashboard/dashboard/src/types/: startup.ts
shark-tank-egypt-dashboard/scraper/: pyproject.toml
shark-tank-egypt-dashboard/scraper/src/scraper/: __init__.py  demo_transcription.py  extractor.py  main.py  models.py  transcriber.py  website_scraper.py  youtube_scraper.py
spotify-taste-summarizer/: .gitignore  pyproject.toml
spotify-taste-summarizer/src/summarizer/: analyzer.py  main.py  prompts.py  spotify.py
youtube-transcriber/: README.md  pyproject.toml  transcribe_youtube.ipynb
youtube-transcriber/src/youtube_transcriber/: __init__.py  main.py  models.py  transcriber.py  youtube.py
