[project]
name = "youtube-transcriber"
version = "0.1.0"
description = "A general-purpose YouTube video transcription tool"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "yt-dlp>=2024.0.0",
    "youtube-transcript-api>=0.6.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
whisper = [
    "openai>=1.0.0",
]
all = [
    "openai>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/youtube_transcriber"]

[project.scripts]
yt-transcribe = "youtube_transcriber.main:main"
